Bind checkstyle to process-sources phase.  Fix checkstyle failures.